--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,4 +1,3 @@
-
 name: 部署文档
 
 on:
@@ -21,19 +20,21 @@ jobs:
           # 如果你文档需要 Git 子模块，取消注释下一行
           # submodules: true
 
-      - name: 安装 pnpm
+      - name: Setup pnpm
         uses: pnpm/action-setup@v2
         with:
-          run_install: true
+          # 选择要使用的 pnpm 版本
           version: 8
+          # 使用 pnpm 安装依赖
+          run_install: true
 
-
-      - name: 设置 Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
+          # 选择要使用的 node 版本
           node-version: 18
+          # 缓存 pnpm 依赖
           cache: pnpm
-
 
       - name: 构建文档
         env:
